examples/test/testpolicy3335.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3335
  namespace: namespace126
spec:
  podSelector:
    matchLabels:
      key29: value17
      key46: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value35
      podSelector:
        matchLabels:
          key4: value40
          key20: value17
